# dify-workflow-api-executor

./: .env.example  .pre-commit-config.yaml  README.md  dify_workflow_executor.py  pyproject.toml  pytest.ini
docs/: design.md
tests/: test_data.csv  test_executor.py
